kubernetes/local/orangered.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: orangered
  labels:
    app: orangered

spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: orangered
    spec:
      containers:
        - name: orangered
          image: orangered
          imagePullPolicy: Never
