kubernetes/local/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
    - host: dev.orangered.io
      http:
        paths:
          - path: /
            backend:
              serviceName: orangered
              servicePort: 5000
